2019-03-18  Rusell Almond  <ralmond@Cherry>

	* R/EIEngine.R (runRule, runTRule): No longer a method of
	EIEngine, pulled out to RuleTable.R
	(processEvent, handleEvent): Pulled these out as functions rather
	than methods.
	(runTriggerRules, runStatusRules, runObservableRules)
	(runResetRules, runContextRules): Pulled these out as functions
	rather than methods.

2019-03-06  Rusell Almond  <ralmond@Cherry>

	* R/Predicates.R (asif.difftime): Rolled back change in
	asif.difftime.  Not sure what this is going to break, but
	currently forcing things to difftimes that should stay as ints or
	reals. 

2019-03-01  Russell Almond  <ralmond@Limu>

	* R/Predicates.R (asif.difftime): Fixed so that defaults to
	seconds if integer.

	* R/Status.R (parseTimer): Debugged timer parsing.

2019-02-28  Russell Almond  <ralmond@Limu>

	* R/Status.R (all.equal.Status): Bug where not checking value of
	attributes. 

	* R/Condition.R ("?in"): Check for NULL target value.

	* R/testRules.R (testRule,testQuery,testPredicate): Added check
	for missing fields in test object.

2019-02-02  Rusell Almond  <ralmond@Cherry>

	* R/AAGenerics.R (MongoDB):  Putting the calls to the mongo()
	constructor in the reference class objects (EIEngine, &c) was
	causing problems because R would try to build prototype instances
	of the class at package load, and would fail if the mongo string
	was not correct.  Now, uri is set when class is initialized, but
	call to mongo does not occur until database is first accessed.
	Note that this means databases should be accessed by the method
	and not the raw field.

2019-01-21  Rusell Almond  <ralmond@Cherry>

	* R/testRules.R (queryTest, predicateTest, ruleTest)
	(ruleTestScript, predicateTestScript, predicateTest): Refactoring
	to (a) use new RuleTest class and (b) use futile.logger.
	(RuleTest): Added this class as a formal class.  

2019-01-19  Rusell Almond  <ralmond@Cherry>

	* R/ErrorHandling.R (withJavaLogging): This probably needs to get