@@ -58,7 +58,17 @@ EIEngine <-
                      p4db
                    },
                    isActivated = function() {
-                     P4db()$find(buildJQuery(app=app(eng)),limit=1)$active
+                     rec <- P4db()$find(buildJQuery(app=app(eng)),limit=1)
+                     if (length(rec)==0L) return(FALSE)
+                     rec$active
+                   },
+                   activate = function() {
+                     if (length(P4db()$find(buildJQuery(app=app(eng))))==0L) {
+                       P4db()$insert(buildJQuery(app=app(eng),active=TRUE))
+                     } else {
+                       P4db()$update(buildJQuery(app=app(eng)),
+                                     '{"$set":{"active":true}}')
+                     }
                    },
                    show=function() {
                      methods::show(paste("<EIEvent: ",app,">"))
@@ -78,12 +88,12 @@ EIEngine$methods(
                  state <- newUser(uid)
                }
                flog.trace("Fetching status for %s, timestamp= %s",
-                          uid(state), timestamp(state))
+                          uid(state), toString(timestamp(state)))
                state
              },
              saveStatus = function(state) {
                flog.trace("Saving status for %s, timestamp=%s",
-                          uid(state), timestamp(state))
+                          uid(state), toString(timestamp(state)))
                userRecords$saveStatus(state)
              }
              )
@@ -91,7 +101,14 @@ EIEngine$methods(
 ## Context Methods
 EIEngine$methods(
              getContext = function(id) {
-               matchContext(id,contexts)
+               conObj <- matchContext(id,contexts)
+               if (is.null(conObj)) {   #Missing from databalse
+                 flog.warn("Context %s missing from database.",id)
+                 conObj <- Context(id,id,NA_integer_,
+                                   doc="Autogenerated context.",
+                                   app=app)
+               }
+               conObj
              },
              clearContexts = function () {
                contexts$clearAll()
@@ -104,14 +121,7 @@ EIEngine$methods(
 ##Rule Methods
 EIEngine$methods(
              findRules = function (verb,object,context,phase) {
-               conObj <- getContext(context)
-               if (is.null(conObj)) {   #Missing from databalse
-                 flog.warn("Context %s missing from database.",context)
-                 appcon <- c(context,"ALL")
-                 names(appcon) <- NULL  #Gets a name from some where.
-               } else {
-                 appcon <- applicableContexts(conObj)
-               }
+               appcon <- applicableContexts(getContext(context))
                rules$findRules(verb,object,appcon,phase)
              },
              loadRules = function (rlist,stopOnDups=TRUE) {
@@ -214,6 +224,7 @@ runContextRules <- function(eng,state,event) {
     if (is(out,'try-error')) return (out)
     else state <- out
     if (oldContext(state) != context(state)) {
+      names(context(state)) <- NULL     #This seems to be causing problems.
       flog.debug("New context for %s: %s",uid(event),
                  context(state))
       return(state)
@@ -235,7 +246,10 @@ runTriggerRules <- function(eng,state,event) {
 }
 
 processEvent <- function (eng,state,event) {
-  flog.debug("New Event %s: %s",uid(event),toString(timestamp(event)))
+  flog.debug("")                        #Blank line for visibility.
+  flog.info("New Event for %s: (%s %s) %s",uid(event),
+             verb(event),object(event),
+             toString(timestamp(event)))
   out <- runStatusRules(eng,state,event)
   if (is(out,'try-error')) return (out)
   else state <- out
@@ -259,8 +273,14 @@ processEvent <- function (eng,state,event) {
 handleEvent <-  function (eng,event) {
   state <- eng$getStatus(uid(event))
   out <- processEvent(eng,state,event)
-  if (is(out,'try-error')) return (out)
+  if (interactive() && FALSE) recover()
+  if (is(out,'try-error')) {
+    flog.warn("Got error %s, not saving status.",toString(out))
+    return (out)
+  }
+  if (interactive() && FALSE) recover()
   eng$saveStatus(out)
+  if (interactive() && TRUE) recover()
 }
 
 mainLoop <- function(eng) {
