@@ -1,3 +1,8 @@
+2019-05-07  Russell Almond  <ralmond@Limu>
+
+	* R/EIEngine.R: Added activate() method, to either insert up
+	update as appropriate.
+
 2019-03-18  Rusell Almond  <ralmond@Cherry>
 
 	* R/EIEngine.R (runRule, runTRule): No longer a method of
